[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.26.0", features = ["bundled"] }
async-std = { version = "1.12.0", features = ["attributes"] }
rpassword = "4.0.0"
rsa = "0.9.3"
rand = "0.8"
base64 = "0.13"
rand_chacha = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }