[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = "1.0"
rand = "0.8"
rusqlite = { version = "0.26.0", features = ["bundled"] }
async-std = { version = "1.12.0", features = ["attributes"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"